--- a/GPTEval/GPTEval/GPTEval.csproj
+++ b/GPTEval/GPTEval/GPTEval.csproj
@@ -9,7 +9,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Betalgo.OpenAI" Version="7.3.1" />
+    <PackageReference Include="Betalgo.OpenAI" Version="7.4.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
   </ItemGroup>
 
